<resources>
    <string name="app_name">Game4in1</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Settings</string>
    <string name="action_new">Settings</string>
    <string name="logo_desc">App logo</string>
    <string name="country_name">Nigeria</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logotip">Ваш логотип</string>
    <string name="levels">Уровни</string>
    <string name="level_num">Уровень:</string>
    <string name="brilliant_done">Отлично сработано!</string>
    <string name="ask_freands">Спроси друзей</string>
    <string name="advices">Подсказки</string>
    <string name="coins">МОНЕТЫ</string>
    <string name="bay_coins">Купить монеты</string>
    <string name="_15">+15</string>
    <string name="send_twit">Опубликовать твит</string>
    <string name="facebook">Поделиться Facebook</string>
    <string name="instagram">Поделиться в Instagram</string>
    <string name="_90">50</string>
    <string name="continues">Продолжить</string>
    <string name="ask_your_freands">Спроси своих друзей!</string>
    <string name="help_freands">Обратитесь за помощью, чтобы решить уровень от ваших друзей через мессенджеры ниже</string>
    <string name="viber">Viber</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="telegram">Telegram</string>
    <string name="facebook_messenger">Facebook Messenger</string>
    <string name="help">Подсказка</string>
    <string name="show_letter">Показать букву</string>
    <string name="_300">300</string>
    <string name="full_solve">Решить полностью</string>
    <string name="_30">60</string>
    <string name="_50">+20</string>

    <!-- app ad section -->
    <string name="app_ad_id">ca-app-pub-5136975333469260~7954175745</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="rewarded_ad_unit_id">ca-app-pub-3940256099942544/5224354917</string>

    <!-- billing section -->
    <string name="google_play_license">123</string>

    <string name="settings_billing">Дополнительные возможности</string>
    <string name="settings_billing_summary">Управление покупками</string>
    <string name="product_id">android.test.purchased</string>
    <string name="subscription_id">testapp.testsubscribe</string>
    <string name="cancel">Отмена</string>

    <string name="settings_purchase_summary">Доступ к закрытым тестам и отключение рекламных баннеров</string>
    <string name="settings_subscribe_summary">Доступ к закрытым тестам, без рекламы на 1 месяц.</string>
    <string name="settings_purchase">VIP версия</string>
    <string name="settings_subscribe">Подписка на 1 месяц</string>

    <string name="settings_restore_purchase_success">Покупка восстановлена</string>
    <string name="settings_purchase_success">Покупка подтверждена</string>
    <string name="settings_subscribe_success">Подписка подтверждена</string>
    <string name="settings_purchase_fail">Ошибка покупки</string>

    <string name="dialog_purchase_title">Content locked.</string>
    <string name="dialog_purchase">In order to view this content, you need to unlock the full version by making a one time purchase.\n\nThis will also remove advertisements throughout the app.</string>
    <string name="alert_for_purchase">Доступ к данному тесту закрыт. Приобретите полный доступ в настройках приложения.</string>
    <string name="standard_offer">Стандартное предложение</string>
    <string name="describe_standard_offer">Покупка 1000 золотых монет</string>
    <string name="profitable_proposition">Выгодное предложение</string>
    <string name="вуыскшиу_profitable_proposition">Покупка 10 000 золотых монет</string>
    <string name="buying_coins">Покупка монет</string>

    <string name="facebook_app_id">311149912819366</string>
    <string name="facebook_hash_key">2jmj7l5rSw0yVb/vlWAYkK/YBwk=</string>
    <string name="settings">Настройки</string>
    <string name="exit">Exit</string>
    <string name="hello_world">Hello world</string>
</resources>
